Hyphenation package installed

--- a/content/00_abstract.tex
+++ b/content/00_abstract.tex
@@ -1,5 +1,5 @@
 \begin{flushleft}
-\textit{Hintergrund und Ziele:} Die rasch fortschreitende technische Entwicklung hat zu Folge, dass Kinder vom Säuglingsalter an von elektronischen Medien umgeben sind und diese eine grosse Rolle beim Aufwachsen der Kinder spielen \cite{Feierabend2015}. Der Umgang mit mobilen Geräten gehört für viele Familien zum Alltag \cite{Wagner2016}. Dabei spielt das Medienverhalten der Eltern eine Rolle, wie sie den Umgang mit digitalen Medien ihren Kindern vermitteln \cite{Livingstone2015a}. Diese Arbeit befasst sich mit der Fragestellung, welchen Effekt der Bindungsstil und das aktuelle Stressempfinden der Eltern auf das im Beisein der Kinder praktizierte Medienverhalten hat. Des Weiteren soll zwischen diesem elterlichen Verhalten und deren subjektiven Wohlbefinden ein möglicher Zusammenhang erläutert werden. Es wird angenommen, dass Eltern mit einem unsicheren Bindungstyp im Beisein ihrer Kinder einen höheren Medienkonsum, ein höheres Stressempfinden und ein tieferes subjektives Wohlbefinden aufweisen. \textit{Stichprobe und Methode:} In einer Online-Umfrage nahmen $N$ = 218 Eltern (20-48 Jahre, 90.8\% weiblich) an einer empirischen Querschnittsstudie teil und beantworteten Fragen zu ihrem Medienverhalten während der Betreuung ihrer Kinder, wobei der Bindungstyp mittels \acrfull{aas}, der aktuell empfundene Stress der Eltern mittels \acrfull{psq} und das subjektive Wohlbefinden mittels \acrfull{shs} erhoben wurde. 
+\textit{Hintergrund und Ziele:} Die rasch fortschreitende technische Entwicklung hat zu Folge, dass Kinder vom Säuglingsalter an von elektronischen Medien umgeben sind und diese eine grosse Rolle beim Aufwachsen der Kinder spielen \cite{Feierabend2015}. Der Umgang mit mobilen Geräten gehört für viele Familien zum Alltag \cite{Wagner2016}. Dabei spielt das Medienverhalten der Eltern eine Rolle, wie sie den Umgang mit digitalen Medien ihren Kindern vermitteln \cite{Livingstone2015a}. Diese Arbeit befasst sich mit der Fragestellung, welchen Effekt der Bindungstyp und das aktuelle Stressempfinden der Eltern auf das im Beisein der Kinder praktizierte Medienverhalten hat. Des Weiteren soll zwischen diesem elterlichen Verhalten und dem subjektiven Wohlbefinden der Eltern ein möglicher Zusammenhang aufgedeckt werden. Es wird angenommen, dass Eltern mit einem unsicheren Bindungstyp im Beisein ihrer Kinder einen höheren Medienkonsum, ein höheres Stressempfinden und ein tieferes subjektives Wohlbefinden aufweisen. \textit{Stichprobe und Methode:} In einer Online\-umfrage nahmen $N$ = 218 Eltern (20-48 Jahre, 90.8\% weiblich) an einer empirischen Querschnittsstudie teil und beantworteten Fragen zu ihrem Medienverhalten während der Betreuung ihrer Kinder. Der Bindungstyp wurde mittels \acrfull{aas}, der aktuell empfundene Stress der Eltern mittels \acrfull{psq} und das subjektive Wohlbefinden mittels \acrfull{shs} erhoben. 
 \textit{Befunde:} Die Ergebnisse bestätigen die Hypothesen nicht. Es konnte jedoch ein schwacher Zusammenhang zwischen dem Bindungstyp der Eltern und dem Schreiben von Textnachrichten gefunden werden. Zudem scheint das Schreiben von Textnachrichten mit einem tieferen Vertrauen, weniger Nähe, mehr Angst, mehr Sorgen, weniger Freude und einem tieferen subjektiven Wohlbefinden einher zu gehen. 
 \textit{Schlussfolgerung:} Unterschiedliche Ausprägungen des Medienverhaltens auf Seiten der Eltern und mögliche Auswirkungen werden diskutiert. Darüber hinaus werden Verbesserungen auf Seiten der Erhebung für weiterführende Forschung vorgeschlagen. \linebreak
 
