--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -9,7 +9,7 @@ Im zweiten Teil dieses Kapitels soll aus theoretischer Sicht auf das Verhalten d
 \subsubsection{Die Eltern-Kind-Beziehung}\label{sec:ElternKindBeziehung}
 Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{LexikonDerBiologie1999}. Ursprünglich als Mutter-Kind-Beziehung bezeichnet, wurde der Begriff aufgrund wissenschaftlicher Ergebnisse zur Eltern-Kind-Beziehung erweitert, da auch ein konstant anwesender, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppen aufbauen. Dabei muss die Gelegenheit zu regelmässigem Austausch gegeben sein. Durch die Anwesenheit und den Zuspruch der vertraut gewordenen Menschen werden die innere Sicherheit, die Geborgenheit und die Angstfreiheit beim Kind gestärkt. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{LexikonDerBiologie1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmalen unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern beziehen. Strukturmerkmale hingegen beziehen sich oft auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kindern und werden in dieser Arbeit nicht einbezogen. Die Qualität der Beziehung kann unter der systemischen Perspektive betrachtet werden, in welcher der Familienprozess als das Ergebnis wechselseitiger Beeinflussung aller Familienmitglieder verstanden wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Des Weiteren kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung den Erziehungsstilen liegt. 
 
-Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundlegenden Umstrukturierung von einer Zweier- zu einer Dreierbeziehung \cite{Hofer1992, Buergin1998}. Dies gilt als eine zentrale Entwicklungsaufgabe von Familien, wobei die Eltern-Kind-Beziehung nicht als einseitige Einflussnahme zu verstehen ist. Vielmehr stehen die Eltern und die Kinder in einer reziproken sozialisatorischen Beziehung zueinander. \citeA{Hofer1992} nennen wichtige Einflussgrössen der dyadischen Beziehung zwischen Vater, Mutter und Kind, die sich auf die kindliche Entwicklung auswirken können: Synchronizität der Interaktion, Persönlichkeit der Eltern, Beziehungsqualität der Partner sowie die affektive und kognitive Ausstattung des Kindes selbst. 
+Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundlegenden Umstrukturierung von einer Zweier- zu einer Dreierbeziehung  \nohyphens{\cite{Hofer1992, Buergin1998}}. Dies gilt als eine zentrale Entwicklungsaufgabe von Familien, wobei die Eltern-Kind-Beziehung nicht als einseitige Einflussnahme zu verstehen ist. Vielmehr stehen die Eltern und die Kinder in einer reziproken sozialisatorischen Beziehung zueinander. \nohyphens{\citeA{Hofer1992}} nennen wichtige Einflussgrössen der dyadischen Beziehung zwischen Vater, Mutter und Kind, die sich auf die kindliche Entwicklung auswirken können: Synchronizität der Interaktion, Persönlichkeit der Eltern, Beziehungsqualität der Partner sowie die affektive und kognitive Ausstattung des Kindes selbst. 
 
 \begin{figure}%[htbp] -> am Schluss fürs Feintuning :-)
   \centering
@@ -42,9 +42,9 @@ Im Rahmen der kognitiven Entwicklung spielen die sozio-kulturellen Theorien eine
 
 Weiter ist die Interaktion zwischen den Eltern und dem Kind in der Einbettung des kulturellen Kontexts für die Entwicklung wichtig. Es gehören nicht nur andere Menschen dazu, sondern auch die zahlreichen Produkte der menschlichen Erfindungskraft, die als sogenannte Kulturwerkzeuge bezeichnet werden. Dazu gehören Symbolsysteme, Artefakte, Fähigkeiten und Werte \cite[S.~226]{Siegler2008}. Gemäss Wygotski sind Kinder soziale Wesen, geformt durch ihren kulturellen Kontext, den sie auch selbst wiederum mitgestalten \cite[S.~227]{Siegler2008}. 
 
-Die Grundlage der kognitiven Entwicklung des Menschen liegt gemäss sozio-kulturellen Theoretikern in der Fähigkeit, \textit{Intersubjektivität} herzustellen: das wechselseitige Verständnis, das Menschen bei der Kommunikation füreinander aufbringen \cite{Gauvain2001, Rogoff1990}. Dabei gilt, dass sich die Beteiligten für eine effektive Verständigung auf dasselbe Thema konzentrieren und auf die Reaktion des andern achten müssen. Dazu ist ein wirksames Lehren und Lernen unverzichtbar. Zwei- bis dreimonatige Säuglinge sind lebhafter und interessierter, wenn die Bezugsperson auf ihre Aktionen reagiert \cite{Murray1985}. Sechsmonatige Kinder können neue Verhaltensweisen allein durch die Beobachtung des Verhaltens anderer Menschen erlernen \cite{Collie1999}. Im Zentrum der Intersubjektivität steht die \textit{geteilte Aufmerksamkeit (engl. joint attention)}, welche einen Prozess beschreibt, bei dem die sozialen Partner ihre Aufmerksamkeit intendiert auf einen gemeinsamen Gegenstand in der äusseren Umwelt richten. Zum Beispiel schauen die Kinder im Alter zwischen 9 und 15 Monaten zunehmend auf dieselben Gegenstände wie ihre Sozialpartner und richten die Aufmerksamkeit von Erwachsenen aktiv auf Objekte, die sie selbst interessieren \cite{Adamson1991, Gauvain2001}. Diese gemeinsame Aufmerksamkeit spielt eine wichtige Rolle bei der frühen Sprachentwicklung \cite[S.~232]{Berk2011}. Eine verwandte Verhaltensweise ist das \textit{soziale Referenzieren (engl. social referencing)}, ein Verhalten, um vom Sozialpartner einen Rat oder eine Anleitung für eine unbekannte oder bedrohliche Situation zu bekommen, indem dieser angeschaut wird \cite{Campos1981} (siehe auch Abschnitt \textit{\nameref{sec:Interaktion}}). 
+Die Grundlage der kognitiven Entwicklung des Menschen liegt gemäss sozio-kulturellen Theoretikern in der Fähigkeit, \textit{Intersubjektivität} herzustellen: das wechselseitige Verständnis, das Menschen bei der Kommunikation füreinander aufbringen \cite{Gauvain2001, Rogoff1990}. Dabei gilt, dass sich die Beteiligten für eine effektive Verständigung auf dasselbe Thema konzentrieren und auf die Reaktion des andern achten müssen. Dazu ist ein wirksames Lehren und Lernen unverzichtbar. Zwei- bis dreimonatige Säuglinge sind lebhafter und interessierter, wenn die Bezugsperson auf ihre Aktionen reagiert \cite{Murray1985}. Sechsmonatige Kinder können neue Verhaltensweisen allein durch die Beobachtung des Verhaltens anderer Menschen erlernen \cite{Collie1999}. Im Zentrum der Intersubjektivität steht die \textit{geteilte Aufmerksamkeit (engl. joint attention)}, welche einen Prozess beschreibt, bei dem die sozialen Partner ihre Aufmerksamkeit intendiert auf einen gemeinsamen Gegenstand in der äusseren Umwelt richten. Zum Beispiel schauen die Kinder im Alter zwischen 9 und 15 Monaten zunehmend auf dieselben Gegenstände wie ihre Sozialpartner und richten die Aufmerksamkeit von Erwachsenen aktiv auf Objekte, die sie selbst interessieren  \nohyphens{\cite{Adamson1991, Gauvain2001}}. Diese gemeinsame Aufmerksamkeit spielt eine wichtige Rolle bei der frühen Sprachentwicklung \cite[S.~232]{Berk2011}. Eine verwandte Verhaltensweise ist das \textit{soziale Referenzieren (engl. social referencing)}, ein Verhalten, um vom Sozialpartner einen Rat oder eine Anleitung für eine unbekannte oder bedrohliche Situation zu bekommen, indem dieser angeschaut wird \cite{Campos1981} (siehe auch Abschnitt \textit{\nameref{sec:Interaktion}}). 
 
-Das frühe Umfeld ist für die Entwicklung des Kindes existentiell wichtig. Diverse Autoren konnten aufzeigen, dass Zuneigung, Engagement sowie Ermutigung der Eltern bei den Säuglingen und Kleinkindern bessere Ergebnisse bei Sprach- und Intelligenztests hervorrufen \cite{Fuligni2004, Linver2004, TamisLeMonda2004}. Das Ausmass, in dem Eltern mit ihren Säuglingen sprechen, trägt erheblich zum frühen Fortschritt des Spracherwerbs bei, was wiederum förderlich für die Intelligenz und gute Schulleistungen in der Grundschule ist \cite{Hart1995}. Warmherziges, einfühlsames elterliches Verhalten ist ein guter Indikator, wie das Kind kognitiv später abschneiden wird \cite[S.~225]{Berk2011}. Der Betreuung steht demzufolge ein grosser Anteil der Entwicklungsarbeit zu. Die Forschung konnte aufzeigen, dass schlecht betreute Kinder in kognitiven und sozialen Fertigkeiten schlechter abschneiden \cite{NICHD2006}.
+Das frühe Umfeld ist für die Entwicklung des Kindes existentiell wichtig. Diverse Autoren konnten aufzeigen, dass Zuneigung, Engagement sowie Ermutigung der Eltern bei den Säuglingen und Kleinkindern bessere Ergebnisse bei Sprach- und Intelligenztests hervorrufen \nohyphens{\cite{Fuligni2004, Linver2004, TamisLeMonda2004}}. Das Ausmass, in dem Eltern mit ihren Säuglingen sprechen, trägt erheblich zum frühen Fortschritt des Spracherwerbs bei, was wiederum förderlich für die Intelligenz und gute Schulleistungen in der Grundschule ist \cite{Hart1995}. Warmherziges, einfühlsames elterliches Verhalten ist ein guter Indikator, wie das Kind kognitiv später abschneiden wird \cite[S.~225]{Berk2011}. Der Betreuung steht demzufolge ein grosser Anteil der Entwicklungsarbeit zu. Die Forschung konnte aufzeigen, dass schlecht betreute Kinder in kognitiven und sozialen Fertigkeiten schlechter abschneiden \cite{NICHD2006}.
 
 \subparagraph{Soziale Entwicklung}\label{par:SozialeEntwicklung}
 Theorien zur sozialen Entwicklung versuchen zu erklären, wie Menschen und soziale Institutionen in der Umwelt von Kindern auf ihre Entwicklung einwirken \cite[S.~470 ff.]{Siegler2008}. Diese Theorien sind auf die Erklärung vieler wichtiger Entwicklungsaspekte gerichtet, wie Emotion, Persönlichkeit, Bindung, Selbst, Beziehung zu Gleichaltrigen, Moral oder Geschlecht. Bei den psychoanalytischen Theorien von Freud und Erikson wird die soziale Entwicklung  durch die biologische Reifung betont. Für Freud ist das Verhalten durch die Befriedigung von grundlegenden Trieben definiert, die weitgehend unbewusst ablaufen. In der Theorie von Erikson wird die Entwicklung durch eine Reihe altersbezogener Entwicklungskrisen resp. Entwicklungsaufgaben bestimmt \cite[S.~472]{Siegler2008}. Die Bedeutung dieser beiden Theorien liegen auf der Betonung der Wichtigkeit früher Lebenserfahrungen und der emotionalen Beziehung sowie der Suche nach Identität. Erikson betonte, dass für eine gesunde Entwicklung nicht die Quantität der Zuwendung zwischen Kind und Bezugsperson ausschlaggebend ist, sondern die Qualität \cite[S.~243]{Berk2011}. Nämlich dass sich zum Beispiel die Mutter unverzüglich und einfühlend um ihr Kind kümmert und sich durch diesen liebevollen Umgang der psychische Konflikt zwischen Urvertrauen versus Misstrauen positiv lösen lässt. Zudem betont Erikson, dass der Konflikt des Kleinkindes betreffend Autonomie versus Scham und Zweifel positiv aufgelöst wird, wenn Eltern ihrem Kind klare Grenzen aufzeigen und genügend Möglichkeiten zur Entfaltung bieten \cite[S.~243]{Berk2011}. 
@@ -56,14 +56,14 @@ Die Theorien der \textit{sozialen Kognition} befassen sich mit der Fähigkeit vo
 Zusammenfassend kann gesagt werden, dass die Entwicklungsaufgaben bezüglich sozialer Entwicklung das Aufbauen von Vertrauen und Autonomie sind. Dies gelingt besonders gut in einer warmherzigen und einfühlsamen Beziehung zwischen Eltern und Kind \cite[S.~224]{Berk2011}.
 
 \subparagraph{Emotionale Entwicklung}\label{par:EmotionaleEntwicklung}
-Emotionen sind durch ihre motivationale Kraft oder Handlungstendenz gekennzeichnet. Sie werden von Funktionalisten als der Versuch oder die Bereitschaft definiert, eine Beziehung mit der Umwelt hinsichtlich relevanter Aspekte herzustellen \cite[S.~529 ff.]{Siegler2008}. Emotionen sind von grundlegender Bedeutung für die Organisation von Fähigkeiten wie den Aufbau von Beziehungen, die Erkundung der Umwelt und die Entdeckung des eigenen Selbst \cite{Halle2003, Saarni2006}. Grundemotionen wie Freude, Furcht (Angst), Ärger (Wut) und Traurigkeit sind bei Menschen universell. Die frühe Gefühlslage eines Säuglings besteht aus wenig mehr als zwei umfassenden Erregunszuständen: einem sich zu einem angenehmen Stimulus hingezogenen und einem von einem unangenehmen Stimulus zurückziehenden \cite{Camras2003, Fox1991}. Erst mit der Zeit entwickeln sich Emotionen zu deutlicheren Zeichen. Sensible und passende Kommunikation von Eltern, bei der sie auf einzelne Aspekte des undifferenzierten emotionalen Verhaltens eines Säuglings eingehen, helfen dem Kind emotionale Ausdrucksformen zu entwickeln \cite{Gergely1999}. Eltern, die für die Signale ihrer Kinder wenig empfänglich sind, rufen bei ihren Kindern häufig traurige Gesichter, unklare Verbalisierungen, einen zusammensinkenden Körper, ein ärgerliches Gesicht oder Weinen und \enquote{Nimm-mich-auf-den-Arm-Gesten} hervor \cite{Weinberg1994, Yale1999}. Bis in die Mitte des ersten Lebensjahrs sind emotionale Ausdrucksformen bereits gut organisiert und spezifisch. Sie sagen viel über das innere Befinden des Kindes aus \cite{Berk2011}. Wenn die Kommunikation zwischen Bezugsperson und Säugling ernsthaft gestört ist, kann häufig Traurigkeit auf Seiten des Säuglings beobachtet werden. Dies kann zum Beispiel bei einer depressiven Mutter oder einem depressiven Vater geschehen, da die Fürsorge für das Kind beeinträchtigt ist und das die Entwicklung erheblich stören kann.
+Emotionen sind durch ihre motivationale Kraft oder Handlungstendenz gekennzeichnet. Sie werden von Funktionalisten als der Versuch oder die Bereitschaft definiert, eine Beziehung mit der Umwelt hinsichtlich relevanter Aspekte herzustellen \cite[S.~529 ff.]{Siegler2008}. Emotionen sind von grundlegender Bedeutung für die Organisation von Fähigkeiten wie den Aufbau von Beziehungen, die Erkundung der Umwelt und die Entdeckung des eigenen Selbst \nohyphens{\cite{Halle2003, Saarni2006}}. Grundemotionen wie Freude, Furcht (Angst), Ärger (Wut) und Traurigkeit sind bei Menschen universell. Die frühe Gefühlslage eines Säuglings besteht aus wenig mehr als zwei umfassenden Erregunszuständen: einem sich zu einem angenehmen Stimulus hingezogenen und einem von einem unangenehmen Stimulus zurückziehenden \nohyphens{\cite{Camras2003, Fox1991}}. Erst mit der Zeit entwickeln sich Emotionen zu deutlicheren Zeichen. Sensible und passende Kommunikation von Eltern, bei der sie auf einzelne Aspekte des undifferenzierten emotionalen Verhaltens eines Säuglings eingehen, helfen dem Kind emotionale Ausdrucksformen zu entwickeln \cite{Gergely1999}. Eltern, die für die Signale ihrer Kinder wenig empfänglich sind, rufen bei ihren Kindern häufig traurige Gesichter, unklare Verbalisierungen, einen zusammensinkenden Körper, ein ärgerliches Gesicht oder Weinen und \enquote{Nimm-mich-auf-den-Arm-Gesten} hervor \nohyphens{\cite{Weinberg1994, Yale1999}}. Bis in die Mitte des ersten Lebensjahrs sind emotionale Ausdrucksformen bereits gut organisiert und spezifisch. Sie sagen viel über das innere Befinden des Kindes aus \cite{Berk2011}. Wenn die Kommunikation zwischen Bezugsperson und Säugling ernsthaft gestört ist, kann häufig Traurigkeit auf Seiten des Säuglings beobachtet werden. Dies kann zum Beispiel bei einer depressiven Mutter oder einem depressiven Vater geschehen, da die Fürsorge für das Kind beeinträchtigt ist und das die Entwicklung erheblich stören kann.
 
 Die \textit{emotionale Selbstregulierung} bezeichnet die Fähigkeit, innere Gefühlszustände zu initiieren, zu hemmen oder zu modulieren, um ein Ziel zu erreichen \cite{Siegler2008}. In den ersten Lebensmonaten helfen Eltern ihren Kindern ihre emotionale Erregung zu regulieren, indem sie kontrollieren, wie stark diese den stimulierenden Ereignissen ausgesetzt sind \cite{Gianino1988}. Ein Säugling ist weniger empfindlich, äussert häufig angenehme Emotionen, erkundet sein Umfeld interessierter und ist leichter zu beruhigen, wenn dessen Eltern angemessen und liebevoll auf seine Hinweisreize reagieren \cite{Crockenberg2004}. Bezugspersonen, die gefühlsbelastende Erlebnisse des Kindes unzureichend regulieren, riskieren, dass sich Gehirnstrukturen unzureichend entwickeln, welche der Stressregulierung dienen \cite[S.~250]{Berk2011}. Ab dem achten Monat beginnt der Säugling mit der sozialen Bezugnahme. Er sucht aktiv nach emotional bewertenden Informationen von einer ihm vertrauten Person \cite{Mumme2007}. Im Allgemeinen geht die soziale Selbstregulierung mit einer höheren sozialen Kompetenz und einem geringeren Problemverhalten einher \cite[S.~580]{Siegler2008}. 
 
-Die Qualität der Eltern-Kind-Beziehung kann die emotionale Entwicklung der Kinder auf verschiedene Arten beeinflussen. Es scheint, als ob die Beziehungsqualität das Sicherheitsgefühl des Kindes sowie die Empfindung gegenüber der eigenen Person und anderen Menschen beeinflusst (vgl. folgendes Unterkapitel \textit{Bindung}). Diese Gefühle beeinflussen wiederum die Emotionalität der Kinder \cite[S.~561]{Siegler2008}. Im Allgemeinen zeigen Kinder mit einer sicheren Bindung zu ihren Eltern eher positive Emotionen und weniger soziale Ängstlichkeit, verglichen mit Kindern mit einer unsicheren Bindung \cite{Bohlin2000}. Der Ausdruck von Emotionen der Eltern kann die soziale Kompetenz und das psychische Wohlbefinden der Kinder beeinflussen. Die Sicht der Kinder auf sich selbst und andere hängt im hohen Masse von den Emotionen ab, die zu Hause gezeigt werden \cite{Dunsmore1997}. Zudem dient der elterliche Umgang mit Emotionen den Kindern als Modell, im Sinne von wann und wie Emotionen ausgedrückt werden \cite{Denham1994}. Dies kann im kindlichen Verständnis zwischenmenschlicher Beziehung beeinflussen, welche Formen des emotionalen Ausdrucks als angemessen und effektiv wahrgenommen werden \cite{Halberstadt1995}. Die Reaktionen der Eltern auf die Emotionen der Kinder scheinen einen Einfluss auf die emotionale Ausdrucksweise der Kinder zu haben. Werden Traurigkeit und Ängstlichkeit bei Kindern von den Eltern abgetan oder deren Gefühle kritisiert, so sind diese Kinder im Allgemeinen weniger emotional und weisen eine geringere soziale Kompetenz auf als Kinder, deren Eltern sie emotional unterstützen \cite{Eisenberg1998, McDowell2000}. 
+Die Qualität der Eltern-Kind-Beziehung kann die emotionale Entwicklung der Kinder auf verschiedene Arten beeinflussen. Es scheint, als ob die Beziehungsqualität das Sicherheitsgefühl des Kindes sowie die Empfindung gegenüber der eigenen Person und anderen Menschen beeinflusst (vgl. folgendes Unterkapitel \textit{Bindung}). Diese Gefühle beeinflussen wiederum die Emotionalität der Kinder \cite[S.~561]{Siegler2008}. Im Allgemeinen zeigen Kinder mit einer sicheren Bindung zu ihren Eltern eher positive Emotionen und weniger soziale Ängstlichkeit, verglichen mit Kindern mit einer unsicheren Bindung \cite{Bohlin2000}. Der Ausdruck von Emotionen der Eltern kann die soziale Kompetenz und das psychische Wohlbefinden der Kinder beeinflussen. Die Sicht der Kinder auf sich selbst und andere hängt im hohen Masse von den Emotionen ab, die zu Hause gezeigt werden \cite{Dunsmore1997}. Zudem dient der elterliche Umgang mit Emotionen den Kindern als Modell, im Sinne von wann und wie Emotionen ausgedrückt werden \cite{Denham1994}. Dies kann im kindlichen Verständnis zwischenmenschlicher Beziehung beeinflussen, welche Formen des emotionalen Ausdrucks als angemessen und effektiv wahrgenommen werden \cite{Halberstadt1995}. Die Reaktionen der Eltern auf die Emotionen der Kinder scheinen einen Einfluss auf die emotionale Ausdrucksweise der Kinder zu haben. Werden Traurigkeit und Ängstlichkeit bei Kindern von den Eltern abgetan oder deren Gefühle kritisiert, so sind diese Kinder im Allgemeinen weniger emotional und weisen eine geringere soziale Kompetenz auf als Kinder, deren Eltern sie emotional unterstützen \nohyphens{\cite{Eisenberg1998, McDowell2000}}. 
 
 \subparagraph{Bindung}\label{par:Bindung}
-Unter Bindung wird eine emotionale Beziehung zu einer bestimmten Person verstanden, die räumlich und zeitlich Bestand hat \cite[S.~585 ff.]{Siegler2008}. Die frühen Beziehungen der Kinder zu ihren Bezugspersonen beeinflussen die Art der Interaktionen mit anderen Menschen sowie ihr Selbstwertgefühl vom Kleinkindalter bis zum Erwachsenenalter. Bezugspersonen können die biologischen Eltern sein, aber auch Personen, die einen engen Bezug zum Kind haben. Bindung kann verstanden werden als eine besondere Art einer affektiv getragenen sozialen Beziehung zwischen dem Kind und einer bevorzugten Person, die als stärker und klüger angesehen wird \cite{Biringen1994}. Diese Gefühlsbeziehung zwischen dem Kind und der primären Bezugsperson wird auch als dyadische Beziehung in der psychoanalytischen Literatur beschrieben \cite{Resch1999}. Die Bindungstheorie wurde von John \citeA{Bowlby1969, Bowlby1973, Bowlby1988} und \citeA{Ainsworth1978} entwickelt und konzeptualisiert. Bolwbys Bindungstheorie ist stark von den Lehren Freuds beeinflusst. Insbesondere da die frühsten Beziehungen der Säuglinge zu ihren Müttern ihre spätere Entwicklung formen \cite{Siegler2008}. Zudem wurde die Theorie interdisziplinär formuliert und hat ihre Wurzeln neben der psychonalytischen auch in der ethnologischen und kognitiven Wissenschaft \cite{Resch1999}. Die Bindungstheorie beschreibt die angeborene Tendenz des menschlichen Individuums, starke Gefühlsbande zu spezifischen Personen der Umgebung zu bilden. Eine Zerstörung dieser Bande durch Trennung oder Verlust zu einer Bezugsperson kann zu affektiven Störungen führen \cite{Resch1999}. 
+Unter Bindung wird eine emotionale Beziehung zu einer bestimmten Person verstanden, die räumlich und zeitlich Bestand hat \cite[S.~585 ff.]{Siegler2008}. Die frühen Beziehungen der Kinder zu ihren Bezugspersonen beeinflussen die Art der Interaktionen mit anderen Menschen sowie ihr Selbstwertgefühl vom Kleinkindalter bis zum Erwachsenenalter. Bezugspersonen können die biologischen Eltern sein, aber auch Personen, die einen engen Bezug zum Kind haben. Bindung kann verstanden werden als eine besondere Art einer affektiv getragenen sozialen Beziehung zwischen dem Kind und einer bevorzugten Person, die als stärker und klüger angesehen wird \cite{Biringen1994}. Diese Gefühlsbeziehung zwischen dem Kind und der primären Bezugsperson wird auch als dyadische Beziehung in der psychoanalytischen Literatur beschrieben \cite{Resch1999}. Die Bindungstheorie wurde von John \nohyphens{\citeA{Bowlby1969, Bowlby1973, Bowlby1988}} und \citeA{Ainsworth1978} entwickelt und konzeptualisiert. Bolwbys Bindungstheorie ist stark von den Lehren Freuds beeinflusst. Insbesondere da die frühsten Beziehungen der Säuglinge zu ihren Müttern ihre spätere Entwicklung formen \cite{Siegler2008}. Zudem wurde die Theorie interdisziplinär formuliert und hat ihre Wurzeln neben der psychonalytischen auch in der ethnologischen und kognitiven Wissenschaft \cite{Resch1999}. Die Bindungstheorie beschreibt die angeborene Tendenz des menschlichen Individuums, starke Gefühlsbande zu spezifischen Personen der Umgebung zu bilden. Eine Zerstörung dieser Bande durch Trennung oder Verlust zu einer Bezugsperson kann zu affektiven Störungen führen \cite{Resch1999}. 
 
 Bindung wir durch die Präferenz einer Bezugsperson charakterisiert, wobei ein Kind unterschiedliche Bindungsarten zu unterschiedlichen Bezugspersonen entwickeln kann. Es werden vier Hauptcharakteristiken der Bindung unterschieden: (1) Angst inhibitiert das Spiel- und Probierverhalten und verstärkt die Bindung; (2) bei Anwesenheit einer Bezugsperson wird das Explorationsverhalten des Kindes in der Umgebung gefördert (\textit{engl. secure base phenomenon}); (3) ist die Bezugsperson anwesend, so verringert sich die Angst des Kindes in Krisensituationen und ungewohnten Situationen; (4) erfolgt eine Trennung zur Bezugsperson, so wird mit Protest reagiert \cite{Resch1999}. Somit ist das Bindungsverhalten die universelle Tendenz des Kindes, nach Nähe und Zuwendung zu einer Bezugsperson in Belastungssituationen zu suchen. Fehlt eine Bezugsperson, kann das Kind auf dieser Suche auch Ersatzobjekte mit Bindung belegen \cite{Resch1999}.
 
@@ -71,7 +71,7 @@ Nach Bowlby findet die anfängliche Entwicklung von Bindung in vier Phasen statt
 
 Bindung soll nicht mit Abhängigkeit verwechselt werden \cite{Schmidt1996}. Bindung scheint die Autonomieentwicklung des Kindes zu fördern, beruht auf einer geglückten gegenseitigen Beziehung und ist somit ein Merkmal der Interaktion. Vier Typen von Bindung können beschrieben werden \cite{Resch1999}: In einer (1) \textit{sicheren Bindung (Typ B)} kann das Kind eine ausgewogene Balance zwischen der Suche nach Nähe und dem Explorationsverhalten im Beisein der Hauptbezugsperson aufrechthalten. Bei Trennung zeigt es Irritation, sucht nach Kontakt und lässt sich bei der Rückkehr der Bezugsperson leicht beruhigen. Bei der (2) \textit{unsicher-vermeidenden Bindung (Typ A)} zeigt das Kind im Beisein der Bezugsperson eine Pseudounabhängigkeit und scheint ihr gegenüber gleichgültig zu sein. Bei Trennung zeigt das Kind nur wenig Irritation, äussert bei Wiedervereinigung mit der Bezugsperson deutliche Ablehnung. Dieses äussere Desinteresse geht jedoch gemäss \citeA{Biringen1994} mit einer erhöhten inneren Erregung einher. Die (3) \textit{ambivalent-unsichere Bindung (Typ C)} ist gekennzeichnet durch eine besondere Abhängigkeit zur Bezugsperson. Bei Trennung ist das Kind sehr irritiert, zeigt eine Kombination von Näheverhältnis und Verweigerung und lässt sich bei der Wiedervereinigung nur schwer beruhigen. Beim (4) \textit{desorganisierten Bindungstyp (Typ D)} zeigt das Kind bei der Trennung keine konsistente Stressbewältigungsstrategie. Das Verhalten ist oft konfus oder sogar widersprüchlich \cite{Siegler2008}. Diese Bindungstypen wurden durch ein von \citeA{Ainsworth1978} entwickeltes Untersuchungsverfahren entwickelt: die \textit{Strange Situation Procedure}. Dabei wurden bei nicht klinischen Gruppen folgende Befunde erhoben: Etwa 57 \% der Kinder waren in einer sicheren Bindung, 26 \% zeigten ein unsicher-vermeidendes und 17 \% ein ambivalent-unsicheres Bindungsmuster. Das vierte Bindungsmuster (Typ D) wurde nur selten und vornehmlich in Hochrisikogruppen von Kindern gefunden \cite{Resch1999}.
 
-Sicher gebundene Kinder zeigen im Kindergarten und in der Schule ein adäquateres Sozialverhalten, mehr Phantasie und positive Affekte beim Spiel, ein höheres Selbstwertgefühl, weniger depressive Symptome und eine längere Aufmerksamkeitsspanne \cite{Dornes1993, Zeanah1994}. Sicher gebundene Kinder scheinen im späteren Lebensalter offener und aufgeschlossener für neue Sozialkontakte mit Gleichaltrigen und Erwachsenen zu sein als vermeidend- oder ambivalent-unsichere Kinder \cite{Resch1999}. Zudem zeigen Kinder, die mit einem Jahr als sicher gebunden eingeschätzt werden, mit sechs Jahren signifikant weniger Psychopathologie als unsicher gebundene \cite{Lewis1984}.
+Sicher gebundene Kinder zeigen im Kindergarten und in der Schule ein adäquateres Sozialverhalten, mehr Phantasie und positive Affekte beim Spiel, ein höheres Selbstwertgefühl, weniger depressive Symptome und eine längere Aufmerksamkeitsspanne \nohyphens{\cite{Dornes1993, Zeanah1994}}. Sicher gebundene Kinder scheinen im späteren Lebensalter offener und aufgeschlossener für neue Sozialkontakte mit Gleichaltrigen und Erwachsenen zu sein als vermeidend- oder ambivalent-unsichere Kinder \cite{Resch1999}. Zudem zeigen Kinder, die mit einem Jahr als sicher gebunden eingeschätzt werden, mit sechs Jahren signifikant weniger Psychopathologie als unsicher gebundene \cite{Lewis1984}.
 
 \subparagraph{Die Entwicklung des Selbst und das Selbstwertgefühl}\label{par:EntwSelbst}
 Bindungserfahrungen in den ersten Jahren beeinflussen die Entwicklung des Selbstgefühls. Die Vorstellung vom Selbst bei Kindern entsteht in den ersten Lebensjahren durch die Interaktionen mit anderen, ihnen wichtigen Bezugspersonen. Sie entwickelt sich bis ins Erwachsenenalter, wobei sie mit der emotionalen und kognitiven Entwicklung mit steigendem Alter komplexer wird \cite[S.~602 ff.]{Siegler2008}. Vielen Theorien zufolge entwickelt sich das Selbstgefühl bei Säuglingen und Kleinkindern aufgrund der Erkenntnis, dass ihre eigenen Handlungen Gegenstände, wie z. B. ein Mobile oder Menschen dazu veranlassen, auf vorhersehbare Weise zu reagieren \cite{Harter1998}. Kinder von Eltern, die sensibel auf die Signale ihrer Kinder reagieren und sie ermutigen, ihre Umgebung zu erkunden, sind gegenüber ihren Altersgenossen bezüglich der Entwicklung ihres Selbst häufig voraus \cite{Pipp1992}. 
@@ -91,7 +91,7 @@ Dieses Kapitel behandelt die Bindungstheorie aus Sicht der Eltern. Die Grundlage
 Die Bindungsmodelle der Eltern werden in der Regel in vier Bindungskategorien unterteilt: (1) autonome oder sichere, (2) abweisende, (3) verstrickte und (4) ungelöst-desorientierte Erwachsene \cite[S.~593 ff.]{Siegler2008}. Da diese Bindungsmuster das Ergebnis der reziproken Interaktion zwischen Kind und Bezugsperson darstellen, sind die frühen primären Bindungsmuster auf das Feinfühligkeitsverhalten der Bindungsperson zurückzuführen. Diese können bezüglich der Reaktionen der Bindungsperson auf das Kind wie folgt klassifiziert werden: (a) konsistente und den Bedürfnissen des Kindes entsprechende Reaktion, (b) inkonsistente und eher auf die eigenen Bedürfnisse entsprechende Reaktion und (c) konsistent abweisende und unfeinfühlige Reaktion auf das Verhalten des Kindes \cite{Schmidt2004}. 
 Erwachsene, die als autonom oder sicher eingestuft werden, beschreiben ihre Vergangenheit in einer ausgeglichenen Weise und erinnern sich an positive wie negative Eigenschaften ihrer Eltern und ihre Beziehung zu ihnen. Autonome Erwachsene sprechen über ihre Vergangenheit in einer konsistenten und kohärenten Weise. Abweisende Erwachsene beschreiben oft, dass sie sich nicht an die Interaktionen mit ihren Eltern erinnern können oder spielen den Einfluss dieser Erfahrung herunter. Verstrickte Erwachsene sind intensiv auf ihre Eltern fokussiert und erinnern sich an eine Reihe von verwirrenden und wutgeladenen Bindungserfahrungen. Sie sind in ihren Bindungserinnerungen gefangen und ihnen ist keine zusammenhängende Beschreibung möglich. Ungelöst-desorganisierte Erwachsene leiden unter den Folgen posttraumatischer Erfahrungen von Verlust oder Missbrauch. Ihre Beschreibungen weisen Fehler auf und ergeben keinen Sinn \cite{Schmidt2004}.
 
-Die Klassifikation der Eltern sagt ihr Einfühlungsvermögen gegenüber den eigenen Kindern und die Bindung ihrer Kinder an sie voraus \cite{Siegler2008}. Sichere Eltern sind in der Regel sensible und warmherzige Eltern und ihre Kinder sind in der Regel sicher gebunden \cite{Magai2000, Steele1996}. Entsprechend haben verstrickte und abweisende Eltern tendenziell unsicher gebundene Kinder. Diese allgemeinen Befunde wurden bei mehreren unterschiedlichen westlichen Kulturen bestätigt \cite{Hesse1999}. Obwohl dieser deutliche Zusammenhang zwischen elterlichen Bindungsmodellen und der Bindungssicherheit der Kinder besteht, ist der Grund für diesen Zusammenhang nicht klar \cite{Siegler2008}. Naheliegend ist, dass autonome Eltern sensibler auf ihre Kinder eingehen und dies zu einer sicheren Bindung bei den Kindern führt \cite{Pederson1998}. Anstelle der eigenen Bindungserfahrung der Eltern könnte die eigene persönliche Theorie über die Entwicklung der Kinder und Kindererziehung oder ihre Persönlichkeit  eine Rolle spielen \cite{Thompson1998}.
+Die Klassifikation der Eltern sagt ihr Einfühlungsvermögen gegenüber den eigenen Kindern und die Bindung ihrer Kinder an sie voraus \cite{Siegler2008}. Sichere Eltern sind in der Regel sensible und warmherzige Eltern und ihre Kinder sind in der Regel sicher gebunden \nohyphens{\cite{Magai2000, Steele1996}}. Entsprechend haben verstrickte und abweisende Eltern tendenziell unsicher gebundene Kinder. Diese allgemeinen Befunde wurden bei mehreren unterschiedlichen westlichen Kulturen bestätigt \cite{Hesse1999}. Obwohl dieser deutliche Zusammenhang zwischen elterlichen Bindungsmodellen und der Bindungssicherheit der Kinder besteht, ist der Grund für diesen Zusammenhang nicht klar \cite{Siegler2008}. Naheliegend ist, dass autonome Eltern sensibler auf ihre Kinder eingehen und dies zu einer sicheren Bindung bei den Kindern führt \cite{Pederson1998}. Anstelle der eigenen Bindungserfahrung der Eltern könnte die eigene persönliche Theorie über die Entwicklung der Kinder und Kindererziehung oder ihre Persönlichkeit  eine Rolle spielen \cite{Thompson1998}.
 
 % ---------------------------------------
 \paragraph{Stress}\label{sec:Stress}
@@ -105,7 +105,7 @@ Bezüglich der täglich ausgesetzten Informationsflut durch die Medien sprechen 
 \paragraph{Subjektives Wohlbefinden}\label{sec:Swb}
 Subjektives Wohlbefinden (\acrshort{swb}) wird in der psychologischen Forschung oft mit \textit{Glück} gleichgesetzt \cite{Eid2014}. Es lassen sich zwei generelle Perspektiven unterscheiden: das subjektive Wohlbefinden und das eudämonische Wohlbefinden. Das erstere bezeichnet Personen als glücklich, die eine häufige Lebenszufriedenheit aufweisen sowie häufig positive und selten negative Gefühle erleben. Im Gegensatz zu diesem hedonistischen Wohlbefinden zeichnet sich das eudämonische oder auch psychologische Wohlbefinden aus durch ein gelingendes Leben und menschliche Stärke. In beiden Richtungen wurden unterschiedliche Theorien und Bedingungen entwickelt. Dabei sind interindividuelle Unterschiede beider Richtungen nicht unabhängig voneinander, sondern hängen stark zusammen \cite{Eid2014}.
 
-Bereits \citeA{Aristoteles1952} (384-323 v.Chr.) bezeichnete Glück als das höchste Gut, das der Mensch um seiner selbst Willen anstrebt. Obschon die Menschheit Glück seit jeher sucht, wurde dieses Thema von der Psychologie lange vernachlässigt, zusammen mit Freude, Heiterkeit und Wohlbefinden \cite{Tugade2014, Gruber2014}. Eine Ursache dafür beschreibt \citeA{Maddux2005} in der sogenannten \textit{Krankheitsideologie}, die vor allem in der Psychiatrie und der klinischen Psychologie anzutreffen sei. Nach wie vor ist von \enquote{Symptom} die Rede, von \enquote{Störung, Pathologie, Krankheit, Diagnose, Behandlung etc.} \cite[S.~14]{Maddux2005}. Im erstmals 1952 von der Amerikanischen Psychologenvereinigung herausgegebenen DSM wurden auf 86 Seiten 106 psychische Störungen beschrieben. Fünfzig Jahre später (1994) waren es 297 Störungen \cite{Bucher2009}. Dies verdeutlicht, dass sich vor allem die Psychiatrie hauptsächlich auf Krankheiten und Störungen fokussiert.
+Bereits \citeA{Aristoteles1952} (384-323 v.Chr.) bezeichnete Glück als das höchste Gut, das der Mensch um seiner selbst Willen anstrebt. Obschon die Menschheit Glück seit jeher sucht, wurde dieses Thema von der Psychologie lange vernachlässigt, zusammen mit Freude, Heiterkeit und Wohlbefinden \nohyphens{\cite{Tugade2014, Gruber2014}}. Eine Ursache dafür beschreibt \citeA{Maddux2005} in der sogenannten \textit{Krankheitsideologie}, die vor allem in der Psychiatrie und der klinischen Psychologie anzutreffen sei. Nach wie vor ist von \enquote{Symptom} die Rede, von \enquote{Störung, Pathologie, Krankheit, Diagnose, Behandlung etc.} \cite[S.~14]{Maddux2005}. Im erstmals 1952 von der Amerikanischen Psychologenvereinigung herausgegebenen DSM wurden auf 86 Seiten 106 psychische Störungen beschrieben. Fünfzig Jahre später (1994) waren es 297 Störungen \cite{Bucher2009}. Dies verdeutlicht, dass sich vor allem die Psychiatrie hauptsächlich auf Krankheiten und Störungen fokussiert.
 
 Es scheint, als ob Glück als Regel angeschaut wird. Glückliche Menschen haben keinen Anlass, professionelle Hilfe aufzusuchen, für Glück scheint es keinen Bedarf zu geben \cite[S.~14]{Veenhoven1991}. Zum Beispiel ist es für Eltern selbstverständlich, dass sich ihre Kinder normal entwickeln sowie gesund und glücklich sind. In diesem Fall steigt das Glück der Eltern nicht an. Es wird jedoch deutlich vermindert, wenn die Kinder Probleme bereiten \cite{Fingerman2012}. Negative Emotionen scheinen hervorstechender und schwerer zu regulieren als die für gegeben hingenommenen positiven Gefühle \cite{Charles2010}. 
 
