--- a/header.tex
+++ b/header.tex
@@ -30,6 +30,10 @@
 \usepackage{listings} % Darstellung von SW-Code
 \usepackage{tabu}
 \usepackage{adjustbox}
+% Silbentrennung
+\usepackage{hyphenat}
+% "Nachlässige" Silbentrennung
+\sloppy
 
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
@@ -62,3 +66,4 @@
   tabsize=3,
   frame=single
 }
+
