--- a/content/0_Einleitung.tex
+++ b/content/0_Einleitung.tex
@@ -1,8 +1,8 @@
 \subsection{Hintergrund, Begründung und Ziel der Studie}\label{sec:Hintergrund}
-In den vergangenen Jahren haben die Informations- und Kommunikationstechnologien einen Wandel in der Gesellschaft in Bezug auf Kommunikationsstrukturen und -formen ausgelöst und diese nachhaltig verändert \cite{Hasebrink2009, Bms2013}. Elektronische Medien sind heute allgegenwärtig, jederzeit verfügbar und aus dem beruflichen und privaten Alltag nicht mehr wegzudenken \cite{Bmfsfj2013}. Welchen Einfluss diese technischen Veränderungen auf das Alltagsleben, den sozialen Umgang in den Familien, die Konsequenzen für Eltern und deren Kinder innerhalb der Peer-Group und im sozialen Umfeld haben, ist Gegenstand aktueller Forschung \cite{Olafsson2014}. Die rasch fortschreitende Entwicklung hat zur Folge, dass Kinder vom Säuglingsalter an von elektronischen Medien umgeben sind und diese eine grosse Rolle beim Aufwachsen von Kindern spielen \cite{Feierabend2015, Divsi2015}. Empirische Daten belegen, dass der Umgang mit mobilen Geräten für viele Familien zum Alltag der Erwachsenen sowie der Kinder unterschiedlichen Alters gehört \cite{Wagner2016}. Die Mehrheit der Kinder hat bis zum Schuleintritt bereits Kontakt mit einer Vielzahl von elektronischen Medien \cite{Feierabend2015}, was unter anderem darauf zurückzuführen ist, dass sie in einem medial reich ausgestatteten Haushalt aufwachsen \cite{Suter2015}. Smartphone, Computer oder Laptop, Internetzugang und Fernsehgerät sind in nahezu allen Haushalten vorhanden. Der Besitz eines eigenen Gerätes steigt mit dem Eintritt in die Schule sprunghaft an \cite{Feierabend2015a}. Eine weitere Studie konnte aufzeigen, dass bei den 3-Jährigen jedes zehnte Kind online tätig ist, was die Tendenz untermauert, dass immer jüngere Kinder bereits ein eigenes Smartphone besitzen \cite{Divsi2015}. Aus dem amerikanischen Report \citeA{Rideout2013a} geht hervor, dass der Zugang zu mobilen Geräten (iPad) bei Kindern von 8 Jahren und jünger in Amerika von 8 \% im Jahr 2011 auf 40 \% im Jahr 2013 angestiegen und der Zugang zu einem Smartdevice von 52 \% auf 75 \% gestiegen ist. Gemäss diesem Report hatten 38 \% aller Kinder unter 2 Jahren bereits ein Mobilgerät für die Nutzung von Medien benutzt (gegenüber 10 \% im Jahr 2011). Studien in der EU kommen auf ähnliche Ergebnisse \cite{Holloway2013}. Sie stellten fest, dass eine Zunahme von Internetkonsum bei Kindern unter 9 Jahren stattgefunden hat. Kinder unter 9 Jahren erfreuen sich an diversen Onlineaktivitäten: Sie schauen Videos, gamen, suchen nach Informationen, erledigen Aufgaben
+In den vergangenen Jahren haben die Informations- und Kommunikationstechnologien einen Wandel in der Gesellschaft in Bezug auf Kommunikationsstrukturen und -formen ausgelöst und diese nachhaltig verändert \cite{Hasebrink2009, Bms2013}. Elektronische Medien sind heute allgegenwärtig, jederzeit verfügbar und aus dem beruflichen und privaten Alltag nicht mehr wegzudenken \cite{Bmfsfj2013}. Welchen Einfluss diese technischen Veränderungen auf das Alltagsleben, den sozialen Umgang in den Familien, die Konsequenzen für Eltern und deren Kinder innerhalb der Peer-Group und im sozialen Umfeld haben, ist Gegenstand aktueller Forschung \cite{Olafsson2014}. Die rasch fortschreitende Entwicklung hat zur Folge, dass Kinder vom Säuglingsalter an von elektronischen Medien umgeben sind und diese eine grosse Rolle beim Aufwachsen von Kindern spielen \cite{Feierabend2015, Divsi2015}. Empirische Daten belegen, dass der Umgang mit mobilen Geräten für viele Familien zum Alltag der Erwachsenen sowie der Kinder unterschiedlichen Alters gehört \cite{Wagner2016}. Die Mehrheit der Kinder hat bis zum Schuleintritt bereits Kontakt mit einer Vielzahl von elektronischen Medien \cite{Feierabend2015}, was unter anderem darauf zurückzuführen ist, dass sie in einem medial reich ausgestatteten Haushalt aufwachsen \cite{Suter2015}. Smartphone, Computer oder Laptop, Internetzugang und Fernsehgerät sind in nahezu allen Haushalten vorhanden. Der Besitz eines eigenen Gerätes steigt mit dem Eintritt in die Schule sprunghaft an \cite{Feierabend2015a}. Eine weitere Studie konnte aufzeigen, dass bei den 3-Jährigen jedes zehnte Kind online tätig ist, was die Tendenz untermauert, dass immer jüngere Kinder bereits ein eigenes Smartphone besitzen \cite{Divsi2015}. Aus dem amerikanischen Report \citeA{Rideout2013a} geht hervor, dass der Zugang zu mobilen Geräten (iPad) bei Kindern von 8 Jahren und jünger in Amerika von 8 \% im Jahr 2011 auf 40 \% im Jahr 2013 angestiegen und der Zugang zu einem Smartdevice von 52 \% auf 75 \% gestiegen ist. Gemäss diesem Report hatten 38 \% aller Kinder unter 2 Jahren bereits ein Mobilgerät für die Nutzung von Medien benutzt (gegenüber 10 \% im Jahr 2011). Studien in der EU kommen auf ähnliche Ergebnisse \cite{Holloway2013}. Sie stellten fest, dass eine Zunahme von Internetkonsum bei Kindern unter 9 Jahren stattgefunden hat. Kinder unter 9 Jahren erfreuen sich an diversen Online\-aktivitäten: Sie schauen Videos, gamen, suchen nach Informationen, erledigen Aufgaben
 und verbringen mit anderen Kindern Zeit. Zudem konnte eine Zunahme bei der Verwendung von Geräten mit Touchscreen bei Kindern im Vorschulalter und Kleinkindern beobachtet werden. Die Autoren weisen auf den digitalen Footprint hin (z. B. Fotos auf dem Internet teilen, Blogs über die Kinder schreiben, Videos online über Facebook teilen, etc.), der bereits bei sehr jungen Kindern vorhanden ist.
 
-Mit dem Einzug elektronischer Medien wie Smartphones oder Tablets, werden Eltern mit neuen Herausforderungen konfrontiert. Insbesondere der erleichterte Zugang zum Internet, der jederzeit und an nahezu jedem Ort möglich ist, wirft zahlreiche Fragen und Unsicherheiten auf Seiten der Eltern auf \cite{Wagner2016}. Seit der Entstehung des Internets und der Digitalisierung beschäftigt sich die Forschung damit, welche Auswirkungen diese neuen Technologien auf die Benutzer haben. Immer mehr jüngere Kinder beschäftigen sich mit dem Internet und den neuen Medien \cite{Rideout2013a, Chaudron2015}, obwohl es ihnen gemäss \citeA{Lobe2011} an technischen, kritischen und sozialen Fähigkeiten mangelt. Dabei stellt sich die Frage, welche Auswirkungen neue Medien auf die Kinder haben \cite{Tomopoulos2010, Pempek2014, Livingstone2015, Masur2015, Troseth2016}. Der Umgang der Eltern mit digitalen Medien und wie sie diesen den Kindern vermitteln, wurde in der Studie von \citeA{Livingstone2015a} untersucht. Dabei stellten die Forschenden einen Effekt des sozioökonomischen Status, wie Einkommen und Bildung, auf die digitale Mediennutzung im Umgang mit den Kindern fest. Länderübergreifende Studien konnten Unterschiede im Verhalten der Eltern im Umgang mit digitalen Medien feststellen \cite{Helsper2013}. Die gemeinsame Nutzung von Medien zwischen Eltern und Kindern (\textit{engl. co-use}) wurde von verschiedenen Autorinnen und Autoren untersucht \cite{Livingstone2008, Nikken2014, Plowman2014, Connell2015, Vaala2015, Harrison2015} und beinhaltet unter anderem das gemeinsame Lesen eines Buches oder das gemeinsame Schauen einer Fernsehsendung \cite{Connell2015}, wobei im Prinzip alle Medien gemeinsam genutzt werden können. 
+Mit dem Einzug elektronischer Medien wie Smartphones oder Tablets, werden Eltern mit neuen Herausforderungen konfrontiert. Insbesondere der erleichterte Zugang zum Internet, der jederzeit und an nahezu jedem Ort möglich ist, wirft zahlreiche Fragen und Unsicherheiten auf Seiten der Eltern auf \cite{Wagner2016}. Seit der Entstehung des Internets und der Digitalisierung beschäftigt sich die Forschung damit, welche Auswirkungen diese neuen Technologien auf die Benutzer haben. Immer mehr jüngere Kinder beschäftigen sich mit dem Internet und den neuen Medien \cite{Rideout2013a, Chaudron2015}, obwohl es ihnen gemäss \citeA{Lobe2011} an technischen, kritischen und sozialen Fähigkeiten mangelt. Dabei stellt sich die Frage, welche Auswirkungen neue Medien auf die Kinder haben \nohyphens{\cite{Tomopoulos2010, Pempek2014, Livingstone2015, Masur2015, Troseth2016}}. Der Umgang der Eltern mit digitalen Medien und wie sie diesen den Kindern vermitteln, wurde in der Studie von \citeA{Livingstone2015a} untersucht. Dabei stellten die Forschenden einen Effekt des sozioökonomischen Status, wie Einkommen und Bildung, auf die digitale Mediennutzung im Umgang mit den Kindern fest. Länderübergreifende Studien konnten Unterschiede im Verhalten der Eltern im Umgang mit digitalen Medien feststellen  \nohyphens{\cite{Helsper2013}}. Die gemeinsame Nutzung von Medien zwischen Eltern und Kindern (\textit{engl. co-use}) wurde von verschiedenen Autorinnen und Autoren untersucht \nohyphens{\cite{Livingstone2008, Nikken2014, Plowman2014, Connell2015, Vaala2015, Harrison2015}} und beinhaltet unter anderem das gemeinsame Lesen eines Buches oder das gemeinsame Schauen einer Fernsehsendung \cite{Connell2015}, wobei im Prinzip alle Medien gemeinsam genutzt werden können. 
 
 Die Auswirkungen von Medienkonsum können nicht abschliessend genannt werden. Es scheint, als ob beispielsweise die Zeit, die Kinder vor einem Bildschirm verbringen, abhängig von Interaktionsfaktoren zwischen Eltern und Kindern ist. Zudem könnte dieses Verhalten in hohem Mass von der Einstellung der Eltern abhängen \cite{Lauricella2015}. Der direkte Vergleich von einem digitalen Medium (TV) und einem analogen (Buch) zeigte, dass sich die Kommunikation zwischen der Mutter und ihrem Lesen lernenden Kind verschlechterte, während ein TV im Hintergrund lief \cite{Nathanson2011}.
 
@@ -10,13 +10,13 @@ Die Auswirkungen von Medienkonsum können nicht abschliessend genannt werden. Es
 \subsubsection{Annahmen und bisherige Forschung}\label{sec:Annahmen}
 Die meisten Studien im Bereich elektronische Medien und Kinder wurden mit Kindern im Alter zwischen 9 und 16 Jahren durchgeführt \cite{Chaudron2015}. Wissenschaftliche Untersuchungen im Bereich Medienumgang der Säuglinge und Kleinkinder fehlen, obwohl sie notwendig wären \cite{Olafsson2014, Konitzer2017}. In der Öffentlichkeit wird das Thema digitale und Kleinkinder kontrovers diskutiert. Dabei geht es primär um die Grundsatzdiskussion, ob die digitalen Medien eher nutzen oder eher schaden \cite{Divsi2015}. Durch die reduzierte Datenlage versuchen sich Experten aus unterschiedlichen Disziplinen hervorzutun, um ihre Expertise in der Öffentlichkeit zu verbreiten. Beispielsweise enthält die im deutschsprachigen Raum erhältliche Broschüre \enquote{Digitale Medien als Spielverderber für Babys} von \citeA{MariaLuisaNuesch2017}, eine Sammlung unterschiedlicher Texte aus der Psychologie, der Pädagogik und der Medienfachwelt. Gemäss \citeA{Huether2017} können Fernsehgeräte oder Mobiltelefone die entscheidende Phase nach der Geburt zwischen Mutter und Kind stören, da sich die Mutter während der ersten Tage nicht genügend ihrem Kind widmet und dadurch die Bindungsbeziehung zwischen Mutter und Kind nicht gelingt. Auf den Vater wird an dieser Stelle in der Broschüre nicht näher eingegangen. Zudem könne sich der Konsum der Bezugspersonen negativ auf die Entwicklung des Gehirns der Neugeborenen auswirken. \citeA{Kaeppeli2017} meint, es sei überaus wichtig, dass stillende Mütter oder Väter, die das Kind mit der Flasche füttern, präsent sind. Das Kind spüre, wenn die Mutter nicht wirklich anwesend sei, was den Stresspegel der Kinder ansteigen lasse. Es sei deshalb wichtig, das Kind von Störquellen wie Fernseher oder Smartphone abzuschirmen. 
 
-Es ist auffällig, wie oft in diesen Artikeln auf die Eltern-Kind-Beziehung eingegangen wird - sei dies die Bindung des Kindes oder die Bindung der Bezugsperson. So beschreibt \citeA{Prekop2017}, dass eine in der Bindung gestörte Bezugsperson sich vor Gefühlen für andere Menschen schützt, indem sie ihre Bindung lieber zu technischen Dingen wie Fernseher oder Computer sucht. Das Schweizer Elternmagazin \enquote{Wir Eltern} schreibt in einem Artikel, dass Babys eher in zugewandte Gesichter als in abgewandte blicken. Der Blick der Eltern auf ihr Smartphone könnte somit Folgen für die Gerhirnentwicklung haben. Da Babys auf direkten Blickkontakt mit erhöhter Gehirnaktivität reagieren, könnte ein Nicht-Ansehen Folgen für die Entwicklung der Bindung zu der Bezugsperson haben \cite{Weber2017}. Die aktuelle Studie \citeA{Blikk2017} will einen signifikanten Zusammenhang zwischen Einschlafstörungen von Säuglingen und der Nutzung elektronischer Medien wie Fernseher oder Musik durch die Eltern während des Einschlafvorgangs der Säuglinge gefunden haben. Doch es benötigt weitere Studien, die sich diesem Thema annehmen \cite{Wartella2016}. Die Frage, wie Eltern ihre Kinder bezüglich Kreativität, Lernen und Entwicklung in Bezug zum Medienkonsum prägen, ist unzureichend beantwortet und benötigt weitere Forschung \cite{AmericanAcademyofPediatrics2011,Troseth2016}. 
+Es ist auffällig, wie oft in diesen Artikeln auf die Eltern-Kind-Beziehung eingegangen wird - sei dies die Bindung des Kindes oder die Bindung der Bezugsperson. So beschreibt \citeA{Prekop2017}, dass eine in der Bindung gestörte Bezugsperson sich vor Gefühlen für andere Menschen schützt, indem sie ihre Bindung lieber zu technischen Dingen wie Fernseher oder Computer sucht. Das Schweizer Elternmagazin \enquote{Wir Eltern} schreibt in einem Artikel, dass Babys eher in zugewandte Gesichter als in abgewandte blicken. Der Blick der Eltern auf ihr Smartphone könnte somit Folgen für die Gerhirnentwicklung haben. Da Babys auf direkten Blickkontakt mit erhöhter Gehirnaktivität reagieren, könnte ein Nicht-Ansehen Folgen für die Entwicklung der Bindung zu der Bezugsperson haben \cite{Weber2017}. Die aktuelle Studie \citeA{Blikk2017} will einen signifikanten Zusammenhang zwischen Ein\-schlaf\-stör\-ungen von Säuglingen und der Nutzung elektronischer Medien wie Fernseher oder Musik durch die Eltern während des Einschlafvorgangs der Säuglinge gefunden haben. Doch es benötigt weitere Studien, die sich diesem Thema annehmen \cite{Wartella2016}. Die Frage, wie Eltern ihre Kinder bezüglich Kreativität, Lernen und Entwicklung in Bezug zum Medienkonsum prägen, ist unzureichend beantwortet und benötigt weitere Forschung \cite{AmericanAcademyofPediatrics2011,Troseth2016}. 
 
-Generell können Medien gemäss \citeA[S.~6]{Willemse2013} einen Einfluss auf die Familie ausüben und umgekehrt kann das Familienklima zur Art des Medienumgangs beitragen. Familiäre Einflussfaktoren auf die Mediennutzung sind  jedoch  nicht  auf  das  medienerzieherische  Handeln  der  Eltern  reduziert  und  lassen sich gemäss \citeA{Kammerl2012} in medienbezogene und medienunabhängige Einflussfaktoren unterteilen. Die Interaktion und Kommunikation in der Familie, der Erziehungsstil der Eltern sowie soziodemografische Merkmale der Eltern sind wichtige Faktoren in der Eltern-Kind-Beziehung.
+Generell können Medien gemäss \citeA[S.~6]{Willemse2013} einen Einfluss auf die Familie ausüben und umgekehrt kann das Familienklima zur Art des Me\-di\-en\-um\-gangs beitragen. Familiäre Einflussfaktoren auf die Mediennutzung sind  jedoch  nicht  auf  das  medienerzieherische  Handeln  der  Eltern  reduziert  und  lassen sich gemäss \citeA{Kammerl2012} in medienbezogene und medienunabhängige Einflussfaktoren unterteilen. Die Interaktion und Kommunikation in der Familie, der Erziehungsstil der Eltern sowie so\-zio\-de\-mo\-gra\-fische Merkmale der Eltern sind wichtige Faktoren in der Eltern-Kind-Beziehung.
 
 Bindung scheint ein zentrales Element in der Interaktion zwischen Bezugspersonen und Säuglingen im Umgang mit Medien zu sein \cite{Prekop2017, Huether2017, Blikk2017}. Im Zusammenhang mit Risikofaktoren für Problemverhalten bei Kindern wird häufig vom Faktor Stress bei den Eltern gesprochen, der oft beim Verhalten in Erziehungssituationen gezeigt wird und über längere Zeit ungünstige Folgen für das Individuum sowie dessen Umfeld hat \cite{Cina2009}. Zudem scheint Stress mit dem Bindungsstil verknüpft zu sein. Tägliche Widrigkeiten scheinen Auswirkungen auf das Erziehungsverhalten der Eltern in Form eines negativen und aversiven Bindungsstils \cite{Dumas1989, Webster-Stratton1988} und einer geringen emotionalen Verfügbarkeit für die Kinder \cite{Campbell1991} zu haben. 
 
-Psychische, physische und soziale Störungen stehen im Zusammenhang mit Stress \cite{Elfering2002, Burisch1994}. Insbesondere die engen Familienmitglieder sind oft direkt oder indirekt von den Auswirkungen des Stresses betroffen. So zeigen Studien einen Zusammenhang zwischen Stress und schlechtem psychischen Befinden \cite{Burisch1994, Krohne1997}, einer negativen Partnerschaftsqualität \cite{Bodenmann2000, Bodenmann1999, Bodenmann2000a} und ungünstigem Erziehungsverhalten \cite{Abidin1992, Belsky1984, WebsterStratton2000}.
+Psychische, physische und soziale Störungen stehen im Zusammenhang mit Stress \cite{Elfering2002, Burisch1994}. Insbesondere die engen Familienmitglieder sind oft direkt oder indirekt von den Auswirkungen des Stresses betroffen. So zeigen Studien einen Zusammenhang zwischen Stress und schlechtem psychischen Befinden \cite{Burisch1994, Krohne1997}, einer negativen Partnerschaftsqualität  \nohyphens{\cite{Bodenmann2000, Bodenmann1999, Bodenmann2000a}} und ungünstigem Erziehungsverhalten  \nohyphens{\cite{Abidin1992, Belsky1984, WebsterStratton2000}}.
 
 % ---------------------------------------
 \subsubsection{Forschungslücke und Ziel der Studie}
