--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\pagenumbering{arabic}
-\pagenumbering{Roman}
+%\pagenumbering{Roman}
 \appendix 
 \renewcommand{\appendixname}{Anhang}
 \renewcommand\appendixtocname{Anhang}
